--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    // "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack -d --watch",  // 개발용 (development)
+    "prod": "webpack -p"  // 제품용 (production)
   },
   "keywords": [],
   "author": "",
